<resources>
    <string name="app_name">Assessment2</string>
    <string name="textHitungLuasPersegi">HITUNG LUAS DAN KELILING PERSEGI PANJANG</string>
    <string name="masukanPanjang">Panjang (cm)</string>
    <string name="masukanLebar">Lebar (cm)</string>
    <string name="hitung">Hitung</string>
    <string name="reset">Reset</string>
    <string name="panjang_invalid">Panjang tidak boleh kosong.</string>
    <string name="lebar_invalid">Lebar tidak boleh kosong.</string>
    <string name="keliling_x">Hasil Keliling = %1$s cm</string>
    <string name="luas_x">Hasil Luas = %1$s cm2</string>
    <string name="rumus_persegipanjang">RUMUS PERSEGI PANJANG</string>
    <string name="rumus_keliling">Keliling = 2 x (p + l)</string>
    <string name="rumus_luas">Luas = p x l</string>
    <string name="lihat_rumus_persegipanjang">Lihat Rumus</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Panjang: %1$s cm\nLebar: %2$s cm\n\n%3$s\n%4$s</string>
    <string name="tentangpersegipanjang">Persegi panjang (bahasa Inggris: rectangle) adalah bangun datar dua dimensi yang dibentuk oleh dua pasang sisi yang masing-masing sama panjang dan sejajar dengan pasangannya, dan memiliki empat buah sudut yang kesemuanya adalah sudut siku-siku.. Persegi panjang merupakan turunan dari segi empat yang mempunyai ciri khusus dua sisi sejajar sama panjang dan keempat sudutnya siku-siku (90°).</string>
    <string name="tentang_persegipanjang">Tentang Persegi Panjang</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="luasx">Luas : %1$s cm2</string>
    <string name="kelilingx">Keliling : %1$s cm</string>
    <string name="datax">Panjang: %1$s cm- Lebar: %2$s cm</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="message">%1$s diklik!</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data Bangun Datar otomatis</string>
    <string name="notif_title">Bangun Datar</string>
    <string name="notif_text">Hitung bangun Datar...</string>
</resources>