<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.persegi_panjang.PersegiPanjangFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textHitungLuasPersegi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/concert_one"
        android:text="@string/textHitungLuasPersegi"
        android:textColor="#3aa8c1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:text="@string/hitung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/luas" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/hitung"
        app:layout_constraintStart_toEndOf="@+id/hitung"
        app:layout_constraintTop_toTopOf="@+id/hitung" />

        <TextView
            android:id="@+id/keliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/concert_one"
            android:text="Hasil Keliling ="
            android:textColor="#3aa8c1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/masukanLebar" />

        <TextView
            android:id="@+id/luas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/concert_one"
            android:text="Hasil Luas ="
            android:textColor="#3aa8c1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/keliling"
            app:layout_constraintTop_toBottomOf="@+id/keliling" />

        <Button
            android:id="@+id/lihatrumus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/lihat_rumus_persegipanjang"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hitung" />


        <Button
            android:id="@+id/bagikan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:text="@string/bagikan"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lihatrumus"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/masukanPanjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHitungLuasPersegi">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valuePanjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukanPanjang" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/masukanLebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="@+id/masukanPanjang"
        app:layout_constraintStart_toStartOf="@+id/masukanPanjang"
        app:layout_constraintTop_toBottomOf="@+id/masukanPanjang">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valueLebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukanLebar" />
    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>